2004-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el (haskell-indent-find-let): New function.
	(haskell-indent-indentation-info): Use it to indent `in'.

	* haskell-font-lock.el (haskell-default-face): Add missing declaration.

	* haskell-indent.el (haskell-indent-open-structure): Simplify.
	(haskell-indent-contour-line): Work even when `start' is in the middle
	of a line.
	(haskell-indent-layout-indent-info): New fun extracted from
	haskell-indent-indentation-info.
	(haskell-indent-indentation-info): Use it as before.  Use it also to
	handle layout-within-open-structure.

2004-10-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-font-lock.el (haskell-font-lock-keywords-create):
	Use explicit `symbol-value' to work around limitations in XEmacs's
	implementation of font-lock.
	(haskell-basic-syntactic-keywords): Fix up char-constants some more.

2004-10-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-doc.el (turn-off-haskell-doc-mode)
	(haskell-doc-current-info): Don't autoload.

	* haskell-decl-scan.el (haskell-ds-match-string):
	Use match-string-no-properties if available.
	(haskell-ds-syntax-table): Use haskell-mode-syntax-table.
	(haskell-ds-imenu-label-cmp): Use car-less-than-car if available.
	(haskell-ds-imenu): Remove obsolete incorrect code.

	* haskell-mode.el: Set things up so that mode-hook functions are not
	necessary, and generic functions can be used instead, like
	global-font-lock-mode.
	(haskell-enum-from-to): Remove.
	(turn-on-haskell-font-lock): Make obsolete.
	(haskell-running-xemacs): Remove.
	(haskell-mode-syntax-table): Fiddle with non-ascii chars.
	Fix up comment syntax in XEmacs.
	(haskell-vars): Improve comment-start-skip.
	Add comment-end-skip.  Setup imenu, eldoc, and font-lock.
	Tweak handling of tabs to be on the safe side.
	(haskell-mode-hooks): Declare and mention some useful ideas.
	(literate-haskell-mode): Simplify.
	(haskell-comment-indent): Remove.  The default works as well.
